--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "formik": "^1.5.8",
     "react": "^16.5.0",
     "react-app-rewire-styled-components": "^3.0.2",
     "react-dom": "^16.5.0",
@@ -13,7 +14,8 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.1",
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
